--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,8 @@
 
   <author email="aceronicolas@hotmail.com">Nicolas Acero</author>
 
-  <!--   <test_depend>gtest</test_depend> -->
+  <license>Apache 2.0</license>
+
   <buildtool_depend>catkin</buildtool_depend>
   <depend>cv_bridge</depend>
   <depend>roscpp</depend>
@@ -24,9 +25,7 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_sensor_msgs</depend>
-  <depend>image_transport</depend>
   <depend>depth_image_proc</depend>
-  <depend>nodelet</depend>
   <depend>libopencv-dev</depend>
   <depend>opencl-headers</depend>
   <depend>ocl-icd-opencl-dev</depend>
